--- a/UI/Views/Praticien/Index.cshtml
+++ b/UI/Views/Praticien/Index.cshtml
@@ -1,27 +1,4 @@
-﻿@* @model IEnumerable<UI.Models.Praticien>
-<h2>Liste des Praticiens</h2>
-
-<table class="table">
-    <thead>
-        <tr>
-
-            <th>Specialité</th>
-            <th>Nom du Praticien</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var praticien in Model)
-        {
-            <tr>
-                <td>@Html.DisplayFor(modelItem =>praticien.Specialite)</td>
-                <td>@Html.DisplayFor(modelItem =>praticien.NomPraticien)</td>
-            </tr>
-        }
-    </tbody>
-</table>
- *@
-@*  ------------------------------------------------------------------------------------------------ *@
-@model UI.ViewModels.PraticienViewModel
+﻿@model UI.Models.Praticien
 
 @{
     ViewData["Title"] = "Liste des Praticiens";
@@ -29,98 +6,33 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<form method="get">
-    <label for="praticienDropdown">Sélectionner un praticien : </label>
-    <select id="praticienDropdown" name="praticienId">
-        <option value="">Tous les praticiens</option>
-        @foreach (var praticien in Model.PraticienList)
+    
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Nom du Praticien</th>
+            <th>Specialité</th>
+          @*   <th>Action</th> <!-- Nouvelle colonne pour le bouton --> *@
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var praticien in ViewBag.Praticiens)
         {
-            <option value="@praticien.Id">@praticien.NomPraticien</option>
-        }
-    </select>
-    <input type="submit" value="Valider">
-</form>
-@if (Model != null && Model.PraticienList != null && Model.PraticienList.Any())
-{
-    @*  <table class="table">
-        <thead>
             <tr>
-                <th>Id</th>
-                <th>Nom</th>
-                <th>Spécialité</th>
-                <!-- Ajoutez d'autres colonnes selon les propriétés de votre modèle Praticien -->
+                <td>@praticien.Id</td>
+                <td>@praticien.NomPraticien</td>
+                <td>@praticien.Specialite</td>
+                <td>
+                    <a href="@Url.Action("Create", "Rdv", new { praticienId = praticien.Id, nomPraticien = praticien.NomPraticien })" class="btn btn-primary">Prendre un rendez-vous</a>
+                     @* <form method="post" action="@Url.Action("Create", "Rdv")">
+                        <input type="hidden" name="praticienId" value="@praticien.Id" />
+                        <input type="hidden" name="nomPraticien" value="@praticien.NomPraticien" />
+                        <button type="submit" class="btn btn-primary">Prendre un rendez-vous</button> *@
+                    
+                </td>
             </tr>
-        </thead>
-        <tbody>
-            @foreach (var praticien in Model.PraticienList)
-            {
-                <tr>
-                    <td>@praticien.Id</td>
-                    <td>@praticien.NomPraticien</td>
-                    <td>@praticien.Specialite</td>
-                    <!-- Ajoutez d'autres cellules selon les propriétés de votre modèle Praticien -->
-                </tr>
-            }
-        </tbody>
-    </table> *@
-//<input type="submit" value="Voir les rendez-vous">
-    <!-- Afficher les rendez-vous du praticien sélectionné                                        -->
-    @*  @if (ViewBag.SelectedPraticien != null && ViewBag.SelectedRdvList != null && ViewBag.SelectedRdvList.Any()) *@
-    @if (Model.SelectedPraticien != null && Model.SelectedRdvList != null && Model.SelectedRdvList.Any())
-
-    {
-        <h2>Rendez-vous du praticien :  Dr @Model.SelectedPraticien.NomPraticien <span style="margin-right: 40px;"></span> spécialiste - @Model.SelectedPraticien.Specialite
-        </h2>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Id</th>
-                    <th>Nom du patient</th>
-                    <th>Date</th>
-                    <!-- Ajoutez d'autres colonnes selon les propriétés de votre modèle Rdv -->
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var rdv in Model.SelectedRdvList)
-                {
-                    <tr>
-                        <td>@rdv.Id</td>
-                        <td>@rdv.NomPatient</td>
-                        <td>@rdv.Date</td>
-                        <!-- Ajoutez d'autres cellules selon les propriétés de votre modèle Rdv -->
-                    </tr>
-                }
-            </tbody>
-        </table>
-
-        <!DOCTYPE html>
-        <html lang='en'>
-        <head>
-            <meta charset='utf-8' />
-            <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.10/index.global.min.js'></script>
-            <style>
-                #calendar {
-                    max-width: 600px; /* Définissez la nouvelle largeur maximale du calendrier */
-                    height: 600px; /* Définissez la nouvelle hauteur du calendrier */
-                    margin: 0 auto; /* Centrez le calendrier horizontalement */
-                }
-            </style>
-            <script>
-
-                document.addEventListener('DOMContentLoaded', function () {
-                    var calendarEl = document.getElementById('calendar');
-                    var calendar = new FullCalendar.Calendar(calendarEl, {
-                        initialView: 'dayGridMonth'
-                    });
-                    calendar.render();
-                });
-
-            </script>
-        </head>
-        <body>
-            <div id='calendar'></div>
-        </body>
-        </html>
-
-    }
-}
+        }
+    </tbody>
+</table>
