--- a/UI/Views/Rdv/PrendreRendezVous.cshtml
+++ b/UI/Views/Rdv/PrendreRendezVous.cshtml
@@ -1,19 +1,20 @@
-﻿@model UI.Models.Rdv
+﻿ @model UI.Models.Rdv
 
-<h2>Créer un rendez-vous</h2>
+<h2>Prendre rendez-vous avec le Dr @ViewBag.NomPraticien</h2>
 
-<form asp-action="Create" method="post" enctype="application/json">
+<form asp-controller="Rdv" asp-action="Create" method="post">
+    <!-- Champ caché pour stocker l'ID du praticien -->
+    <input type="hidden" asp-for="NomPraticien" value="@ViewBag.NomPraticien" />
+    <input type="hidden" asp-for="Id" value="0" />
+
     <div class="form-group">
         <label asp-for="NomPatient">Nom du Patient</label>
         <input asp-for="NomPatient" class="form-control" />
         <span asp-validation-for="NomPatient" class="text-danger"></span>
     </div>
-  
-     <div class="form-group">
-        <label asp-for="NomPraticien">Nom du Praticien</label>
-        <input asp-for="NomPraticien" class="form-control" />
-        <span asp-validation-for="NomPraticien" class="text-danger"></span>
-    </div>
+
+    <!-- Vous pouvez retirer le champ "NomPraticien" s'il n'est pas nécessaire,
+         car vous avez déjà l'ID du praticien dans le champ caché -->
 
     <div class="form-group">
         <label asp-for="Date">Date du Rendez-vous</label>
