--- a/UI/Views/Shared/_Layout.cshtml
+++ b/UI/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Rdv" asp-action="Create">créer un RDV</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Rdv" asp-action="Index">liste RDV</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
