--- a/UI/Views/Rdv/Index.cshtml
+++ b/UI/Views/Rdv/Index.cshtml
@@ -6,7 +6,7 @@
 
 <h1>@ViewData["Title"]</h1>
 
-
+<p>Filtre par Nom du Praticien: @ViewData["NomPraticien"]</p>
 
 <table class="table">
     <thead>
