--- a/UI/Views/Praticien/Index.cshtml
+++ b/UI/Views/Praticien/Index.cshtml
@@ -11,7 +11,7 @@
 <table class="table">
     <thead>
         <tr>
-            <th>ID</th>
+          @*   <th>ID</th> *@
             <th>Nom du Praticien</th>
             <th>Specialité</th>
           @*   <th>Action</th> <!-- Nouvelle colonne pour le bouton --> *@
@@ -21,17 +21,12 @@
         @foreach (var praticien in ViewBag.Praticiens)
         {
             <tr>
-                <td>@praticien.Id</td>
+               @*  <td>@praticien.Id</td> *@
                 <td>@praticien.NomPraticien</td>
                 <td>@praticien.Specialite</td>
                 <td>
                     <a href="@Url.Action("Create", "Rdv", new { praticienId = praticien.Id, nomPraticien = praticien.NomPraticien })" class="btn btn-primary">Prendre un rendez-vous</a>
                     <a href="@Url.Action("Index", "Rdv", new { nomPraticien = praticien.NomPraticien})" class="btn btn-primary">agenda</a>
-                    @* <form method="post" action="@Url.Action("Create", "Rdv")">
-                        <input type="hidden" name="praticienId" value="@praticien.Id" />
-                        <input type="hidden" name="nomPraticien" value="@praticien.NomPraticien" />
-                        <button type="submit" class="btn btn-primary">Prendre un rendez-vous</button> *@
-                    
                 </td>
             </tr>
         }
