--- a/UI/Views/Rdv/PrendreRendezVous.cshtml
+++ b/UI/Views/Rdv/PrendreRendezVous.cshtml
@@ -1,4 +1,4 @@
-﻿ @model UI.Models.Rdv
+﻿@*  @model UI.Models.Rdv
 
 <h2>Prendre rendez-vous avec le Dr @ViewBag.NomPraticien</h2>
 
@@ -28,3 +28,4 @@
         <button type="submit" class="btn btn-primary">Créer le rendez-vous</button>
     </div>
 </form>
+ *@
