--- a/UI/Views/Shared/_Layout.cshtml
+++ b/UI/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Rdv" asp-action="Index">liste RDV</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Agenda" asp-action="Index">agendas</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
