passage de Agenda à Creation rdv les champs NomPraticien et Date s'auto implémentent

--- a/UI/Views/Praticien/Index.cshtml
+++ b/UI/Views/Praticien/Index.cshtml
@@ -25,8 +25,8 @@
                 <td>@praticien.NomPraticien</td>
                 <td>@praticien.Specialite</td>
                 <td>
-                    <a href="@Url.Action("Create", "Rdv", new { praticienId = praticien.Id, nomPraticien = praticien.NomPraticien })" class="btn btn-primary">Prendre un rendez-vous</a>
-                    <a href="@Url.Action("Index", "Rdv", new { nomPraticien = praticien.NomPraticien})" class="btn btn-primary">agenda</a>
+                     <a href="@Url.Action("Create", "Rdv", new { praticienId = praticien.Id, nomPraticien = praticien.NomPraticien })" class="btn btn-primary">Prendre un rendez-vous</a>
+                     <a href="@Url.Action("Index", "Rdv", new {  praticienId = praticien.Id, nomPraticien = praticien.NomPraticien})" class="btn btn-primary">agenda</a>
                 </td>
             </tr>
         }
