dans la vue create les dates sont prises en compte

--- a/UI/Views/Rdv/Create.cshtml
+++ b/UI/Views/Rdv/Create.cshtml
@@ -5,8 +5,8 @@
 <p>Nom du Praticien: @ViewData["NomPraticien"]</p>
 @* <p>jour disponible choisi :@ViewData["Date"]</p>
  *@
-
 <p>jour disponible choisi :@(((DateTime)ViewData["Date"]).ToString("dd/MM/yyyy"))</p>
+
 
 
 
@@ -23,12 +23,22 @@
         <span asp-validation-for="NomPraticien" class="text-danger"></span>
     </div>
 
+   @*  <div class="form-group">
+        <label asp-for="Date">Date du Rendez-vous</label>
+        <input asp-for="Date" type="date" class="form-control" value="@((DateTime)ViewData["Date"]).ToString(" yyyy-MM-dd")" />
+      @*   <input asp-for="Date" type="datetime-Local" class="form-control" /> 
+        <span asp-validation-for="Date" class="text-danger"></span>
+    </div> *@
+    
+    @{
+        string dateISO8601 = ((DateTime)ViewData["Date"]).ToString("yyyy-MM-dd");
+    }
+
     <div class="form-group">
         <label asp-for="Date">Date du Rendez-vous</label>
-        <input asp-for="Date" type="datetime-local" class="form-control" />
+        <input asp-for="Date" type="date" class="form-control" value="@dateISO8601" />
         <span asp-validation-for="Date" class="text-danger"></span>
     </div>
-
 
 
     <!-- Ajoutez d'autres champs si nécessaire -->
