--- a/UI/Views/Shared/_Layout.cshtml
+++ b/UI/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Praticien" asp-action="Index">Praticien</a>
                         </li>
-                        <li class="nav-item">
+                     @*    <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Rdv" asp-action="Create">créer un RDV</a>
                         </li>
                         <li class="nav-item">
@@ -36,7 +36,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Agenda" asp-action="Index">agendas</a>
-                        </li>
+                        </li> *@
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
