login et register

--- a/UI/Views/Praticien/Index.cshtml
+++ b/UI/Views/Praticien/Index.cshtml
@@ -1,32 +1,29 @@
 ﻿@model UI.Models.Praticien
 
 @{
-    ViewData["Title"] = "Liste des Praticiens";
+    ViewData["Title"] = "Liste des Praticiens:";
 }
 
-<h1>@ViewData["Title"]</h1>
-
-    
+<h2 style="margin-top: 20px; margin-bottom: 20px;padding-left: 300px;">@ViewData["Title"]</h2>
 
 <table class="table">
     <thead>
         <tr>
-          @*   <th>ID</th> *@
-            <th>Nom du Praticien</th>
-            <th>Specialité</th>
-          @*   <th>Action</th> <!-- Nouvelle colonne pour le bouton --> *@
+            <th style="padding-left: 600px;width: 50px; color: black;">Nom du Praticien</th>
+            <th style="padding-left: 500;width: 50px; color: black;">Specialité</th>
+            <th style="padding-left: 40px;width: 50px; color: black;">Action</th> <!-- Nouvelle colonne pour le bouton -->
         </tr>
-    </thead>
+    </thead> 
     <tbody>
         @foreach (var praticien in ViewBag.Praticiens)
         {
-            <tr>  
-               @*  <td>@praticien.Id</td> *@
-                <td>@praticien.NomPraticien</td>
-                <td>@praticien.Specialite</td>
-                <td>
-@*                      <a href="@Url.Action("Create", "Rdv", new { praticienId = praticien.Id, nomPraticien = praticien.NomPraticien })" class="btn btn-primary">Prendre un rendez-vous</a>
- *@                     <a href="@Url.Action("Index", "Rdv", new {  praticienId = praticien.Id, nomPraticien = praticien.NomPraticien})" class="btn btn-primary">agenda</a>
+            <tr>
+                <td style="padding-left: 600px;width: 50px; color: black;"> docteur @praticien.NomPraticien</td>
+                <td style="padding-right: 50px;width: 50px; color: black;">@praticien.Specialite</td>
+                <td >
+                    <div style="margin-right: 70px;">
+                        <a href="@Url.Action("Index", "Rdv", new { praticienId = praticien.Id, nomPraticien = praticien.NomPraticien })" class="btn btn-primary">agenda</a>
+                    </div>
                 </td>
             </tr>
         }
